# utaformatix-lib

./: .gitignore  .gitmodules  Cargo.toml  README.md
crates/ruby/: Cargo.toml  Gemfile  Rakefile  utaformatix.gemspec
crates/ruby/lib/: utaformatix.rb
crates/ruby/lib/utaformatix/: version.rb
crates/ruby/sig/: utaformatix.rbs
crates/ruby/spec/: spec_helper.rb
crates/ruby/src/: extconf.rb  lib.rs
crates/rust/: Cargo.toml
crates/rust/js/: .boa_history  build.ts  bun.lockb  encoding.js  entry.js  package.json
crates/rust/src/: base.rs  error.rs  job_queue.rs  js_impls.rs  lib.rs  model.rs  process.rs  project.rs  wrapper.rs
crates/rust/src/snapshots/: utaformatix_rs__tests__parse_standard_mid.snap
crates/rust/tests/: convert.rs  japanese_lyrics.rs
crates/rust/tests/snapshots/: convert__parse_ccs.snap  convert__parse_dv.snap  convert__parse_music_xml.snap  convert__parse_standard_mid.snap  convert__parse_svp.snap  convert__parse_tssln.snap  convert__parse_uf_data.snap  convert__parse_ust.snap  convert__parse_ustx.snap  convert__parse_vocaloid_mid.snap  convert__parse_vpr.snap  convert__parse_vsqx.snap  japanese_lyrics__convert_japanese_lyrics.snap
