[package]
name = "ruby"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
async-ffi = "0.5.0"
bytes = "1.6.0"
duplicate = "1.0.0"
magnus = { version = "0.7.1", features = ["bytes", "rb-sys"] }
once_cell = "1.19.0"
rb-sys = "0.9.98"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
serde_magnus = { git = "https://github.com/sevenc-nanashi/serde-magnus" }
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing-subscriber = "0.3.18"
utaformatix.workspace = true
