[package]
name = "utaformatix-rs"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = "1.0.86"
async-channel = "2.3.1"
boa_engine = { version = "0.18.0", features = ["annex-b"] }
duplicate = "1.0.0"
educe = { version = "0.6.0", features = ["Debug"] }
encoding_rs = "0.8.34"
serde = "1.0.203"
serde_json = "1.0.117"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = [
  "rt-multi-thread",
  "macros",
  "rt",
  "time",
  "sync",
] }
tracing = "0.1.40"
uuid = { version = "1.8.0", features = ["v4"] }

[dev-dependencies]
insta = "1.39.0"
rstest = "0.21.0"
tracing-test = "0.2.5"
